--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "just some random bookmarklets i like",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no tests have been added yet\" && exit 1",
+    "build": "webpack"
   },
   "author": "djspac3",
   "license": "MIT",
