--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ node_modules/
 
 # Ignore build output directory
 dist/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
