--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "author": "djspac3",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.13",
+    "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "react-dom": "^19.1.1",
     "style-loader": "^4.0.0",
-    "webpack": "^5.99.9",
+    "webpack": "^5.101.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1"
   }
