--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.13",
     "babel-loader": "^10.0.0",
-    "react-dom": "^19.1.1",
+    "preact": "^10.27.0",
     "webpack": "^5.101.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1"
