--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "just some random bookmarklets i like",
   "private": true,
   "scripts": {
-    "build": "npx webpack"
+    "build": "node build.mjs build",
+    "format": "npx prettier . --write"
   },
   "author": "djspac3",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^24.0.13",
-    "esbuild-loader": "^4.3.0",
+    "esbuild": "0.25.8",
     "preact": "^10.27.0",
-    "webpack": "^5.101.0",
-    "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.1"
+    "prettier": "^3.6.2"
   }
 }
