--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^24.0.13",
     "esbuild": "0.25.8",
+    "esbuild-sass-plugin": "^3.3.1",
     "preact": "^10.27.0",
     "prettier": "^3.6.2"
   }
