--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "build": "node build.mjs build",
+    "build:manual": "node build.mjs manual",
     "build:watch": "node build.mjs watch",
     "format": "npx prettier . --write"
   },
